syntax = "proto3";

package users;

service UsersService {
  rpc CreateUser (CreateUserRequest) returns (UserResponse);
}

message CreateUserRequest {
  string uuid = 1;
  string email = 2;
  string name = 3;
  string lastname = 4;
  string phoneNumber = 5;
}

message UserResponse {
  string uuid = 1;
  string email = 2;
  string name = 3;
  string lastname = 4;
  string phoneNumber = 5;
  string message = 6;
}
